# gust

./: .gitignore  AGENTS.md  Cargo.toml  PLAN.md  PROJECT.md  README.md  biome.json  context7.json  lefthook.yml  package.json  progress.md  tsconfig.json
.changeset/: napi-optional-dep-pin.md  remove-turboserve-publish.md
.doctrine/: project.json
.github/workflows/: ci.yml  napi.yml  release.yml
benchmarks/: README.md  bench.ts  compare-all.sh  compare-fair.sh  minimal-rust-server.rs  package.json  run-all.sh
benchmarks/servers/: bun-minimal.ts  bun-native.ts  bun-static.ts  elysia-static.ts  elysia.ts  express.ts  fastify.ts  gust-minimal-v2.ts  gust-minimal.ts  gust-native.ts  gust-static.ts  gust-turbo.ts  gust-wasm.ts  gust.ts  h3.ts  hono-static.ts  hono.ts
crates/gust-core/: Cargo.toml
crates/gust-core/src/: error.rs  http2.rs  lib.rs  request.rs  response.rs  router.rs  server.rs  tls.rs
crates/gust-core/src/crypto/: base64.rs  mod.rs  sha1.rs
crates/gust-core/src/handlers/: health.rs  mod.rs  sse.rs  static_files.rs  websocket.rs
crates/gust-core/src/middleware/: auth.rs  body_limit.rs  cache.rs  circuit_breaker.rs  compress.rs  cookie.rs  cors.rs  csrf.rs  jwt.rs  mod.rs  otel.rs  proxy.rs  range.rs  rate_limit.rs  security.rs  session.rs  tracing.rs  validate.rs
crates/gust-core/src/parser/: method.rs  mod.rs
crates/gust-core/src/pure/: body_size.rs  client_ip.rs  cookie.rs  cors_origin.rs  http_range.rs  mod.rs  rate_limit_math.rs  security_headers.rs  sse_format.rs
crates/gust-core/src/tracing/: mod.rs  w3c.rs
crates/gust-core/tests/: http_core_differential.rs  range_header_corpus.rs
crates/gust-napi/: Cargo.toml  gust-napi.darwin-arm64.node  gust-napi.linux-x64-gnu.node  index.js  index.node  package.json
crates/gust-napi/npm/darwin-arm64/: package.json
crates/gust-napi/npm/darwin-x64/: package.json
crates/gust-napi/npm/linux-arm64-gnu/: package.json
crates/gust-napi/npm/linux-arm64-musl/: package.json
crates/gust-napi/npm/linux-x64-gnu/: package.json
crates/gust-napi/npm/linux-x64-musl/: package.json
crates/gust-napi/src/: lib.rs
crates/gust-router/: Cargo.toml
crates/gust-router/src/: lib.rs
crates/gust-wasm/: Cargo.toml
crates/gust-wasm/src/: lib.rs  parser.rs  router.rs  tracing.rs  validate.rs  wasm.rs  websocket.rs
docs/specs/: http-core-parity-slice.json  migration-ledger.json
scripts/: check-no-ts-backend.sh  run-gust-differential.sh
scripts/differential/: http-core-oracle.ts
scripts/differential/fixtures/: http-core-corpus.json
test/: nativeAuthority.matrix.test.ts
website/: .gitignore  package.json  source.config.ts  tsconfig.json  vercel.json
website/content/docs/: index.mdx  installation.mdx  meta.json  quick-start.mdx
website/content/docs/api/: meta.json  response-helpers.mdx  types.mdx
website/content/docs/guides/: authentication.mdx  deployment.mdx  meta.json  middleware.mdx  routing.mdx  validation.mdx
website/content/docs/server/: health-checks.mdx  meta.json  sse.mdx  streaming.mdx  websocket.mdx
website/public/: llms.txt
website/src/app/: global.css  layout.config.tsx  layout.tsx  page.tsx
website/src/app/docs/: layout.tsx
website/src/app/docs/[[...slug]]/: page.tsx
website/src/lib/: source.ts
