[workspace]
resolver = "2"
members = [
    "crates/gust-router",
    "crates/gust-core",
    "crates/gust-wasm",
    "crates/gust-napi",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/sylphx/gust"

[workspace.dependencies]
# Core dependencies (shared)
bytes = "1"
smallvec = "1.13"
thiserror = "1"

# Async runtime
tokio = { version = "1", default-features = false }

# HTTP
hyper = { version = "1", default-features = false }
hyper-util = { version = "0.1", default-features = false }
http-body-util = "0.1"
http = "1"

# TLS
rustls = { version = "0.23", default-features = false }
tokio-rustls = "0.26"
rustls-pemfile = "2"
webpki-roots = "0.26"

# Memory
bumpalo = "3.16"
mimalloc = { version = "0.1", default-features = false }

# Platform-specific
socket2 = { version = "0.5", features = ["all"] }
num_cpus = "1.16"
parking_lot = "0.12"
libc = "0.2"

# WASM bindings
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = "0.3"

# Native bindings
napi = { version = "2", features = ["async", "tokio_rt"] }
napi-derive = "2"

# Internal
gust-router = { path = "crates/gust-router" }
gust-core = { path = "crates/gust-core" }

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
panic = "abort"

[profile.release-wasm]
inherits = "release"
opt-level = "z"
