[package]
name = "gust-napi"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Native Node.js bindings for gust-core via napi-rs"

[lib]
crate-type = ["cdylib"]

[features]
default = ["compress"]
# Enable TLS support
tls = ["gust-core/tls", "dep:tokio-rustls", "dep:rustls", "dep:rustls-pemfile"]
# Enable io_uring on Linux
io_uring = ["gust-core/io_uring", "dep:tokio-uring"]
# Enable compression
compress = ["gust-core/compress", "dep:flate2", "dep:brotli"]

[dependencies]
gust-core = { workspace = true, features = ["native"] }
napi.workspace = true
napi-derive.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "net", "io-util", "macros", "sync"] }
mimalloc.workspace = true
# Also need direct access to these for native server
hyper = { workspace = true, features = ["server", "http1", "http2"] }
hyper-util = { workspace = true, features = ["tokio", "http2"] }
http-body-util.workspace = true
bytes.workspace = true
smallvec.workspace = true
num_cpus.workspace = true
# TLS support
tokio-rustls = { workspace = true, optional = true }
rustls = { version = "0.23", optional = true, default-features = false, features = ["std", "tls12"] }
rustls-pemfile = { version = "2", optional = true }
# Compression support
flate2 = { version = "1.0", optional = true }
brotli = { version = "7", optional = true }
# Streaming/async support
futures-util = { version = "0.3", features = ["sink"] }
pin-project-lite = "0.2"
async-stream = "0.3"
# Lock-free atomic swap for hot path optimization
arc-swap = "1.7"

# io_uring support (Linux only)
[target.'cfg(target_os = "linux")'.dependencies]
tokio-uring = { version = "0.5", optional = true }

[build-dependencies]
napi-build = "2"
