[package]
name = "gust-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "WASM bindings for gust-core"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
console_error_panic_hook = ["dep:console_error_panic_hook"]

[dependencies]
gust-core = { workspace = true, features = ["wasm"] }
wasm-bindgen.workspace = true
js-sys.workspace = true
web-sys = { workspace = true, features = ["console"] }
console_error_panic_hook = { version = "0.1", optional = true }
